# SkillXx

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DOWNLOAD_STATS.md  LICENSE  PRIVACY.md  PRIVACY_CN.md  README.md  README_CN.md  SECURITY.md  build.sh  index.html  package-lock.json  package.json  test-deep-link.sh  vite.config.ts
.github/workflows/: build.yml  quality.yml
.workbuddy/memory/: 2026-06-26.md
docs/archive/: DESIGN.md  README.md  TRANSLATION_OPTIMIZATION_COMPLETED.md
scripts/: check-file-size.sh  file-size-budgets.txt
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  test_support.rs
src-tauri/src/commands/: apply_model_to_tool.rs  auth.rs  claude_config.rs  codex_config.rs  codex_proxy.rs  config.rs  editors.rs  feedback.rs  files.rs  gemini_config.rs  hermes_config.rs  llm.rs  llm_providers.rs  marketplace.rs  mod.rs  platform_marketplace.rs  skill_packages.rs  skills.rs  sync.rs  tools.rs  updater.rs
src-tauri/src/models/: auth.rs  config.rs  editor.rs  marketplace.rs  mod.rs  skill.rs  skill_package.rs  tool.rs  update.rs
src-tauri/src/services/: auth.rs  cache.rs  claude_config.rs  clawhub.rs  codex_config.rs  codex_proxy.rs  config_manager.rs  detector.rs  editor_detector.rs  file_ops.rs  gemini_config.rs  hermes_config.rs  linker.rs  llm.rs  marketplace.rs  mod.rs  path_validator.rs  scanner.rs  skill_packages.rs  translation.rs  translation_cache.rs  updater.rs
src/constants/: categories.ts  (+2 more)
(+147 files in other folders)
